added bootcamp project 1 (LifeStyle Apartment Finder-frontend web app) with active link to deployed app with screenshot

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,3 +15,13 @@ body {
     color: black;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
+.app a {
+    color: black;
+    font-size: x-large;
+}
+
+.app img {
+    width: 1000px;
+    height: auto;
+}
