--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,9 +31,13 @@ main {
 .container {
     margin-left: auto;
     margin-right: auto;
-    width: 800px;
-    height: 800px;
+    width: 900px;
+    height: 900px;
     opacity: 0.7;
+}
+
+.col-sm {
+    margin-bottom: 100px;
 }
 
 .scientist {
